860t5d37a fix product card spacing

--- a/src/styles/templates/_p3-site-smaller.scss
+++ b/src/styles/templates/_p3-site-smaller.scss
@@ -350,7 +350,7 @@
     .product-card {
 
         .product-title__text {
-            @apply mx-0 lg:mb-25 my-25 lg:my-0;
+            @apply mx-0 lg:mb-25 mb-25 lg:my-0 min-h-[54px] lg:min-h-[auto];
         }
 
         .review-stars__number {
@@ -385,7 +385,7 @@
             }
 
             @screen sm {
-                @apply flex-row items-center justify-between max-h-[38px] px-g;
+                @apply flex-row items-center justify-between max-h-[38px] px-g mb-[8px];
 
                 .product-card-btn__text,
                 .product-card-btn__prices {
@@ -506,6 +506,10 @@
 
         .product-card {
             @apply mb-4 lg:mb-5;
+
+            &__content {
+                @apply px-[8px] lg:px-[1rem];
+            }
 
             button {
                 @apply max-h-[none] min-h-[38px] lg:min-h-[50px];
